--- a/_includes/sharelinks.html
+++ b/_includes/sharelinks.html
@@ -1,4 +1,4 @@
-<styl>
+<style>
   #share-buttons {display: inline-block; vertical-align: middle; }
   #share-buttons:after {content: ""; display: block; clear: both;}
   #share-buttons > div {position: relative; text-align: left; height: 36px; width: 32px; float: left; text-align: center;}
