Refactor blog posts list for improved readability

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,11 +54,16 @@
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
           {% endif %}
 	    <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<ul class="posts">
+  {% for post in site.posts %}
+    <li>
+      <span>{{ post.date | date_to_string }}</span> &raquo; 
+      <a href="{{ site.baseurl }}{{ post.url }}">
+        {% if post.title %}{{ post.title }}{% else %}{{ post.slug | replace: "-", " " | capitalize }}{% endif %}
+      </a>
+    </li>
+  {% endfor %}
+</ul>
 
   <p>
     <a href="{{ site.github_url }}">GitHub</a> |
