--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,11 +32,12 @@
       </div>
     </header>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          {{ content }}
-        </section>
+<div id="content-wrapper">
+  <div class="inner clearfix">
+    <section id="main-content">
+      {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+      {{ content }}
+    </section>
 
         <aside id="sidebar">
           {% if site.show_downloads %}
